PDF rough-in
